2007-06-14  Akim Demaille  <demaille@gostai.com>

	merge -r 1138:1157 https://svn.gostai.com/svn/kernel1/branches/1.0
	Space changes only.

2007-06-14  Akim Demaille  <demaille@gostai.com>

	* src/uexpression.cc: Use for instead of while.

2007-06-14  Akim Demaille  <demaille@gostai.com>

	Readability
	* src/ucommand.cc: Formatting changes.
	* src/uexpression.cc (UExpression::eval_VARIABLE): Improve the
	readability of the code handle derives.

2007-06-10  Jean-Christophe Baillie  <baillie@gostai.com>

        Until now, freezing a time controlled command (like wait or a modified
	assignement) did not freeze the internal time of the command, which
	resulted in an abrupt reajustement when the command was unfrozen. This
	patch fixes the problem on wait and assignments, and the corresponding
	tests has been added.
	add a first attempt in "time freezing" capabilities. 
	* src/ucommand.cc: the WAIT and ASSIGN_VALUE commands now store the
        'lastExec' time and a flag when they have been frozen. Upon
	unfreezing, the internal time-oriented variables are adjusted based on
	the difference between the current time and lastExec..
	* src/ucommand.hh: add lastExec and the 'frozen' flag.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	Finish broken merge
	merge -r 1038:1078 failed to include the modifications for
	uconnection.cc.
	* src/uconnection.cc: Import the changes documented in 2007-06-04.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/ueventhandler.cc: Sort commutable lines.
	Promote for over while.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	The attribute UVariableName::rooted is not removed (that was
	the effect of the "only" keyword) because it appears to be
	set and checked in other places.
	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y: Remove
	the "only" keyword.
	This was validated by JCB.
	(refvariable): Remove, use variable instead.
	(refvariables): Rename as...
	(variables): this.
